# opencpn-plugin-template-main

./: .codeiumignore  .gitignore  CLAUDE.md  CMakeLists.txt  CrashDumps  Plugin.cmake  analyse.txt  build_simple.bat  clean_and_build.bat  cmake_config.bat  cmake_final_output.txt  cmake_log.bat  cmake_output.txt  cmake_root.bat  cmake_run.bat  compile_test.bat  full_build.bat  msbuild.bat  msbuild_output.txt  project_memory.md  rebuild.bat  rebuild_standard.bat  run_cmake.bat  step1_cmake.bat  step2_build.bat  tmp_head.cpp  tmp_tail.cpp  upload.bat  upload.sh  wxWidgetsDLL.7z  wxWidgetsHeaders.7z
.claude/hooks/: auto-build-deploy.sh
.trae/commands/: 编译.md
cmake/: PluginLibs.cmake
include/: IsoLine2.h  NcdfIsoLine.h  config.h  gui.h  helper.h  icons2.h  ncdf.h  ncdf_pi.h  ncdf_reader.h  ncdfoverlayfactory.h
netcdf-study/: README.md  ncdf3_example.cpp  ncdf4_example.cpp
opencpn-libs/api-19/: cmake_install.cmake
opencpn-libs/plugin_dc/dc_utils/: CMakeLists.txt
opencpn-libs/plugin_dc/dc_utils/src/: TexFont.cpp
po/: zh_CN.po
src/: IsoLine2.cpp  NcdfIsoLine.cpp  gui.cpp  helper.cpp  icons2.cpp  ncdf.cpp  ncdf_pi.cpp  ncdf_reader.cpp  ncdfdata.cpp  ncdfoverlayfactory.cpp
